# self-study

./: .gitignore  README.md
buck2/: Readme.md
buck2/gtest/: BUCK
buck2/gtest/gtest/: BUCK
buck2/gtest/toolchains/: BUCK
buck2/hello_haskell/: BUCK  Main.hs  Sum.hs  t.sh
buck2/hello_world/: BUCK  lib.cpp  lib.h  main.cpp  test.cpp
c++/snipets/: 0-set-empty-tuply.cpp
deplang/: Readme.md  deplang.cabal  watch-tests.sh
deplang/src/: Syntax.hs
deplang/test/: CoreSpec.hs
gnumake/: .gitignore  Makefile  README.md  count_words.c  count_words.test  hello.c  lexer.l
gnumake/include/: counter.h  lexer.h
gnumake/src/: count_words.c  counter.c
java/: Readme.md
java/Hello/: Hello.java
java/hello/: Makefile
java/snippets/: BUCK  Makefile  S0BasicTypes.java  interactive.sh
rust/: Readme.md
rust/1-getting-started/hello_cargo/: Cargo.toml
rust/1-getting-started/hello_world/: Makefile
rust/2-guessing-game/guessing_game/src/: main.rs
