cabal-version:      3.8
name:               deplang

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            MIT

author:             rbykov04@gmail.com
maintainer:         rbykov
build-type:         Simple
extra-doc-files:    Readme.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

common shared-properties
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:    base >= 4.15 && < 5

executable deplang-gen
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.17.2.0

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2021

-- Явно даем имя главной библиотеке, чтобы тест-сьют мог ее увидеть
library
    default-language: GHC2021
    ghc-options:      -Wall
    hs-source-dirs:   src
    exposed-modules:  Syntax
    build-depends:    base >= 4.15 && < 5

test-suite deplang-test
    import:           shared-properties
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    other-modules:    CoreSpec
    build-depends:    deplang
                    , hspec >= 2.10
                    , hspec-discover >= 2.10

    build-tool-depends: hspec-discover:hspec-discover >= 2.10
